# llm-at-localhost

./: README.md  pyproject.toml
llm_at_localhost/:  playground.py  __main__.py  gpt-j.py  utils.py
llm_at_localhost/models/: __init__.py  hf_models.py
tests/: test_version.py
