[tool.poetry]
name = "llm_at_localhost"
version = "0.1.0"
description = "Serve llm locally"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "llm_at_localhost"}]

[tool.poetry.dependencies]
python = "^3.8.1"
torch = "^2.0.1"
transformers = "^4.29.2"
gradio = "^3.35.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pytest-cov = "^4.1.0"
coverage-badge = "^1.1.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
